--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+body {
+    background-color: #f2f2f2;
+}
+
 .about-me {
-    padding: 50px;
+    padding: 80px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
