--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,99 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: #f2f2f2;
+    font-size: 16px;
+    font-family: Monserrat, Monospace;
+    background-color: #C2C0A6;
+}
+
+i {
+    font-size: 4rem;
+}
+
+.full-screen {
+    width: 100%;
+}
+
+.container {
+    max-width: 50rem;
+    margin: 0 auto;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+}
+
+.hero {
+    width: 100%;
 }
 
 .about-me {
-    padding: 80px;
+    padding: 5rem;
     display: flex;
-    justify-content: space-around;
+    gap: 1rem;
+    justify-content: space-evenly;
     align-items: center;
+}
+
+.profile-card {
+    width: 15rem;
+    border-radius: 1rem;
+    box-shadow: 8px 10px 15px -3px rgba(0,0,0,0.3);
+    overflow: hidden;
+    display: flex;
+    align-content: center;
+}
+
+.profile-card img {
+    width: 100%;
+}
+
+.description {
+    max-width: 20rem;
+    text-align: justify;
+}
+
+.section {
+    width: 100%;
+    height: 100%;
+    padding: 2rem;
+    text-align: center;
+}
+
+.bg-secondary {
+    background-color: #024554;
+    color: #C2C0A6;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.row {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 4rem;
+}
+
+.galery {
+    margin: 0 auto;
+    max-width: 50rem;
+    padding: 2rem 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+}
+
+footer {
+    padding: 0.5rem 0;
+    text-align: center;
 }
